Catalogs section visibility issue resolved

--- a/apps/starhub/src/app/home/discover/discover.component.scss
+++ b/apps/starhub/src/app/home/discover/discover.component.scss
@@ -10,7 +10,7 @@ h1 {
   margin: 1rem;
 }
 
-app-rewards-cards, app-catalogs, app-campaigns {
+app-rewards-cards, app-campaigns {
   margin-left: 0.5rem;
 }
 
